--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   shared_preferences: ^2.2.0
   google_fonts: ^4.0.4
   flutter_slidable: ^3.0.0
+  provider: ^6.0.5
+  location: ^5.0.3
+  google_maps_flutter: ^2.3.0
+  url_launcher: ^6.1.11
 dev_dependencies:
   flutter_test:
     sdk: flutter
